added VTHREAD option

--- a/Insizzle/Makefile
+++ b/Insizzle/Makefile
@@ -1,7 +1,9 @@
 # Makefile for InsizzleV3
 
+# use -DVTHREADS in CFLAGS for running code with vthreads
+
 CC = gcc
-CFLAGS = -c -Wall -pedantic -std=c99 -Wextra -m32 -g `xml2-config --cflags`
+CFLAGS = -c -Wall -pedantic -std=c99 -Wextra -m32 -g `xml2-config --cflags` -DVTHREAD
 LDFLAGS = -lm -m32 `xml2-config --libs`
 
 INCDIR = inc
