removed -I from make, now able to make without API

--- a/Insizzle/Makefile
+++ b/Insizzle/Makefile
@@ -36,7 +36,7 @@ $(TARGETAPI): $(OBJ)
 	ar cr $(TARGETAPI) $(OBJ)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
-	$(CC) $(CFLAGS) $< -o $@ -I$(INCDIR)/ -I$(VTAPI)
+	$(CC) $(CFLAGS) $< -o $@ -I$(INCDIR)/ $(VTAPI)
 
 clean:
 		rm -f $(OBJ) $(TARGET) $(TARGETV) $(TARGETAPI)
