removed insizzle/gcc verification from master branch

--- a/Insizzle/Makefile
+++ b/Insizzle/Makefile
@@ -20,27 +20,26 @@ SRC = $(wildcard $(SRCDIR)/*.c)
 OBJ = $(SRC:$(SRCDIR)/%.c=$(OBJDIR)/%.o)
 
 TARGET = INSIZZLE
-TARGETV = VAJAZZLE
 TARGETAPI = INSIZZLEAPI
 
 REV_PERL = `perl scripts/revision.pl ${TARGET} ${TARGET}`
 
-Vajazzle:	CFLAGS += -DVAJAZZLE
 API:		CFLAGS += -DAPI
+DEBUG:		CFLAGS += -DDEBUG -DPRINTOUT
+NOSTALLS:	CFLAGS += -DNOSTALLS
+VTHREAD:	CFLAGS += -DVTHREAD
 
 all: $(SRC) $(TARGET)
 
-Vajazzle: $(SRC) $(TARGETV)
-
 API:	$(SRC) $(TARGETAPI)
+DEBUG:	$(SRC) $(TARGET)
+NOSTALLS: $(SRC) $(TARGET)
+VTHREAD: $(SRC) $(TARGET)
 
 $(TARGET): $(OBJ)
 	   $(CC) $(OBJ) $(LDFLAGS) -o $@
 	@echo "Versioning"
 	@echo ${REV_PERL}
-
-$(TARGETV): $(OBJ)
-	ar cr $(TARGETV) $(OBJ)
 
 $(TARGETAPI): $(OBJ)
 	ar cr $(TARGETAPI) $(OBJ)
@@ -49,7 +48,7 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	$(CC) $(CFLAGS) $< -o $@ -I$(INCDIR)/ $(VTAPI)
 
 clean:
-		rm -f $(OBJ) $(TARGET) $(TARGETV) $(TARGETAPI)
+		rm -f $(OBJ) $(TARGET) $(TARGETAPI)
 
 distclean:
-		rm -f *~ \#* $(OBJDIR)/*.o $(SRCDIR)/*~ $(INCDIR)/*~ $(TARGET) $(TARGETV) $(TARGETAPI)
+		rm -f *~ \#* $(OBJDIR)/*.o $(SRCDIR)/*~ $(INCDIR)/*~ $(TARGET) $(TARGETAPI)
