--- a/Insizzle/Makefile
+++ b/Insizzle/Makefile
@@ -9,8 +9,8 @@
 # -DNOSTALLS - count stall events but don't execute them
 
 CC = gcc
-CFLAGS = -c -Wall -pedantic -std=c99 -Wextra -m32 `xml2-config --cflags` -D_XOPEN_SOURCE
-LDFLAGS = -lm -m32 `xml2-config --libs` -lpcre
+CFLAGS = -c -Wall -pedantic -std=c99 -Wextra `xml2-config --cflags` -D_XOPEN_SOURCE
+LDFLAGS = -lm `xml2-config --libs` -lpcre
 
 INCDIR =  inc
 LE1_DRIVER_INC = ../le1_driver
