--- a/Insizzle/use_api/Makefile
+++ b/Insizzle/use_api/Makefile
@@ -8,7 +8,7 @@ LDFLAGS = -lm `xml2-config --libs` -lpcre
 all:
 	cd ../ && make clean && make API && cd .
 	$(CC) main.c $(CFLAGS)
-	$(CC) -o TEST main.o ../INSIZZLEAPI $(LDFLAGS)
+	$(CC) -o TEST main.o ../INSIZZLEAPI.so $(LDFLAGS)
 
 test:
 	./TEST -i test_data/iram0.bin -d test_data/dram.bin -m test_data/model_1lsu_1.xml
